[workspace]
members = ["behaviortree", "async_behaviortree"]
resolver = "2"

[workspace.dependencies]
# Serialization and Deserialization
serde = { version = "1.0", features = ["rc", "derive"] }

# Async
tokio = { version = "1", default-features = false, features = [
    "macros",
    "sync",
] }

# Tracing
tracing = "0.1"
