[workspace]
members = ["behaviortree", "async_behaviortree"]
resolver = "2"

[workspace.dependencies]
# Serialization and Deserialization
serde = { version = "1.0", features = ["rc", "derive"] }

# Async
tokio = { version = "1", default-features = false, features = [
    "macros",
    "sync",
] }
tokio-util = "0.7"

# Tracing
tracing = "0.1"

serde_json = "1.0"
tracing-subscriber = "0.3"
tracing-forest = "0.1"
