[package]
name = "async_behaviortree"
version = "0.1.1"
edition = "2024"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

behaviortree_common = { path = "../behaviortree_common" }

async-trait = "0.1.80"

[dev-dependencies]
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-forest = { workspace = true }

ticked_async_executor = "0.2"
tokio-stream = { version = "0.1.15", features = ["full"] }
