[package]
name = "async_behaviortree"
version = "0.1.2"
edition = "2024"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

behaviortree_common = { path = "../behaviortree_common" }

async-trait = "0.1"

futures = "0.3.31"

[dev-dependencies]
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-forest = { workspace = true }

ticked_async_executor = { version = "0.3", features = ["tick_event"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
