[package]
name = "async_behaviortree"
version = "0.1.2"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["rc", "derive"] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "sync",
] }
tokio-util = "0.7"

async-trait = "0.1"
futures = "0.3.31"

[dev-dependencies]
ticked_async_executor = { version = "0.3", features = [
    "tick_event",
    "timer_registration",
] }
tokio-stream = { version = "0.1.15", features = ["full"] }
