[package]
name = "behaviortree"
version = "0.1.2"
edition = "2021"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

behaviortree_common = { path = "../behaviortree_common" }

[dev-dependencies]
serde_json = "1.0"

# Tracing
tracing-subscriber = "0.3"
tracing-forest = "0.1"
