[package]
name = "behaviortree"
version = "0.1.5"
edition = "2024"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

behaviortree_common = { path = "../behaviortree_common" }

[dev-dependencies]
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-forest = { workspace = true }
