[package]
name = "behaviortree_future"
version = "0.1.0"
edition = "2024"

[dependencies]
behaviortree_common = { path = "../behaviortree_common" }

reusable-box-future = "0.2.0"

[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing-forest = { workspace = true }

tokio = { version = "*", features = ["full"] }

dhat = "0.3.3"
